bk_ida/gccida/c0/find_oldest_value_reg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/regrename.c:1776:29: error: must use 'enum' tag to refer to type 'reg_class'
rtx  find_oldest_value_reg( reg_class a1, rtx reg,  struct value_data *vd) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/regrename.c:1798:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+48h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/regrename.c:1843:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/regrename.c:1844:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v21 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/regrename.c:1888:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[vd->e[regno].mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/regrename.c:1889:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = mode_class_0[vd->e[regno].mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/regrename.c:1903:22: error: assigning to 'uint32' (aka 'unsigned int') from incompatible type 'struct rtx_def'
*( _DWORD *)&newa[1] = reg[1]; 
                     ^ ~~~~~~
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_oldest_value_reg/src/obj/regrename.o] Error 1
